redb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redb-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: redis-11338.demo.rec.34.127.23.12.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redis-enterprise-database
            port:
              number: 11338
